# coasts

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  REMOTE_COAST_TEST.md  cli-update-policy.json  install_mutagen.sh  simple_deploy.sh
coast-cli/: Cargo.toml
coast-daemon/: Cargo.toml
coast-guard/: package.json
coast-service/: REMOTE_SPEC.md  REMOTE_SSG_SERVICE_DESIGN.md
coast-ssg/: Cargo.toml  DESIGN.md  README.md  REMOTE_DESIGN.md
coast-ssg/src/: daemon_integration.rs  docker_ops.rs  doctor.rs  drift.rs  lib.rs  paths.rs  port_checkout.rs  remote_tunnel.rs  state.rs  test_support.rs
coast-ssg/src/coastfile/: mod.rs  raw_types.rs
coast-ssg/src/runtime/: auto_create_db.rs  bind_mounts.rs  compose_synth.rs  host_volume_import.rs  lifecycle.rs  mod.rs  pinning.rs  port_checkout.rs  ports.rs  secrets_inject.rs
dindind/: integration-runner.sh  integration.yaml
docs/: GETTING_STARTED.md  README.md  SKILLS_FOR_HOST_AGENTS.md  doc_ordering.txt  installation_prompt.txt  skills_prompt.txt
integrated-examples/: helpers.sh  projects.txt  setup.sh  test_agent_shell.sh  test_assign.sh  test_checkout.sh  test_claude.sh  test_coastfile_toml.sh  test_coastfileless_build.sh  test_daemon_cwd_isolation.sh  test_daemon_restart.sh  test_dangling_containers.sh  test_envvar_interpolation.sh  test_error_cases.sh  test_external_worktree_assign.sh  test_hmr.sh  test_lifecycle.sh  test_no_compose.sh  test_nuke.sh  test_observability.sh  test_reboot_recovery.sh  test_restart_services_bare_noautostart.sh  test_secrets.sh  test_shared_service_auto_create_db.sh  test_shared_service_dns_resolution.sh  test_shared_service_ports.sh  test_ssg_allocator_collision_fallback.sh  test_ssg_auto_create_db.sh  test_ssg_auto_start_on_run.sh  test_ssg_bind_mount_symmetric.sh  test_ssg_build_global_working_dir.sh  test_ssg_build_minimal.sh  test_ssg_build_multiple_services.sh  test_ssg_build_rebuild_prunes.sh  test_ssg_checkout_displaces_instance.sh  test_ssg_checkout_positional.sh  (+44 more)
(+487 files in other folders)
